# ollama-gui-interface

./: .gitignore  Cargo.toml  InnoSetupScript.iss  LICENSE  README.md  build.rs  da  defaultprompts.json  history.json  settings.json
config/: defaultprompts.json  settings.json
output/: history.json
src/: app.rs  gui.rs  main.rs
