[package]
name = "ollama-gui"
version = "0.3.5"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.3.2", features = ["stream"]} 
tokio = { version = "1.47.0", features = ["full"] }
iced = { version = "0.13.1", features = ["advanced"]}
iced_widget = { version = "0.13.4", features = ["markdown"] }
futures = "0.3.31"
iced_native = "0.10.3"
webbrowser = "1.0.5"
crossbeam-channel = "0.5.15"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde_json = "1.0.141" 
serde = { version = "1.0.219", features = ["derive"] }
rustrict = "0.7.35"
chrono = "0.4.41"
image = "0.25.6"

[build-dependencies]
winresource = "0.1.23"

[profile.release]
opt-level = 2
lto = "thin"