[package]
name = "ollama-gui"
version = "0.3.6"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.3.4", features = ["stream"]} 
tokio = { version = "1.49.0", features = ["full"] }
iced = { version = "0.14.0", features = ["advanced", "tokio"]}
iced_widget = { version = "0.14.2", features = ["markdown"] }
futures = "0.3.32"
iced_native = "0.10.3"
webbrowser = "1.1.0"
crossbeam-channel = "0.5.15"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde_json = "1.0.149" 
serde = { version = "1.0.228", features = ["derive"] }
rustrict = "0.7.38"
chrono = "0.4.43"
image = "0.25.9"

[build-dependencies]
winresource = "0.1.30"

[profile.release]
opt-level = 2
lto = "thin"