[package]
name = "ollama-gui"
version = "0.4.0"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.3.4", features = ["stream"]} 
tokio = { version = "1.52.3", features = ["full"] }
iced = { version = "0.14.0", features = ["advanced", "tokio"]}
iced_widget = { version = "0.14.2", features = ["markdown"] }
futures = "0.3.32"
iced_native = "0.10.3"
webbrowser = "1.2.1"
crossbeam-channel = "0.5.15"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde_json = "1.0.150" 
serde = { version = "1.0.228", features = ["derive"] }
rustrict = "0.7.38"
chrono = "0.4.44"
image = "0.25.10"
iced_selection = { version = "0.5", features = ["markdown"] }

[build-dependencies]
winresource = "0.1.31"

[profile.release]
opt-level = 2
lto = "thin"